--- a/dkms.conf
+++ b/dkms.conf
@@ -2,6 +2,6 @@ PACKAGE_NAME=”snescon_gpio_rpi”
 PACKAGE_VERSION=”1.0.0”
 CLEAN="make clean"
 MAKE[0]="make all KVERSION=$kernelver"
-BUILT_MODULE_NAME[0]=”snescon_gpio_rpi”
-DEST_MODULE_LOCATION[0]="/updates"
+BUILT_MODULE_NAME[0]=”$PACKAGE_NAME”
+DEST_MODULE_LOCATION[0]="/updates/dkms”
 AUTOINSTALL="yes"
